# mx-sdk-rs-0.21.1-versions-changed

./: CHANGELOG.md  Cargo.toml  README.md  arwen.sh  sizes.sh  test-arwen.sh
contracts/examples/bonding-curve-contract/: Cargo.toml
contracts/examples/bonding-curve-contract/abi/: Cargo.toml
contracts/examples/bonding-curve-contract/abi/src/: main.rs
contracts/examples/bonding-curve-contract/wasm/: Cargo.toml
contracts/examples/bonding-curve-contract/wasm/src/: lib.rs
contracts/examples/crowdfunding-dct/: Cargo.toml
contracts/examples/crowdfunding-dct/abi/: Cargo.toml
contracts/examples/crowdfunding-dct/abi/src/: main.rs
contracts/examples/crowdfunding-dct/tests/: crowdfunding_dct_denali_rs_test.rs
contracts/examples/crowdfunding-dct/wasm/: Cargo.toml
contracts/examples/crowdfunding-dct/wasm/src/: lib.rs
contracts/examples/crowdfunding-erc20/: Cargo.toml
contracts/examples/crowdfunding-erc20/abi/: Cargo.toml
contracts/examples/crowdfunding-erc20/abi/src/: main.rs
contracts/examples/crowdfunding-erc20/tests/: crowdfunding_erc20_denali_rs_test.rs
contracts/examples/crowdfunding-erc20/wasm/: Cargo.toml
contracts/examples/crowdfunding-erc20/wasm/src/: lib.rs
contracts/examples/erc1155/: Cargo.toml
contracts/examples/erc1155-marketplace/: Cargo.toml
contracts/examples/erc1155-marketplace/abi/: Cargo.toml
contracts/examples/erc1155-marketplace/abi/src/: main.rs
contracts/examples/erc1155-marketplace/tests/: erc1155_marketplace_denali_rs_test.rs
contracts/examples/erc1155-marketplace/wasm/: Cargo.toml
contracts/examples/erc1155-marketplace/wasm/src/: lib.rs
contracts/examples/erc1155/abi/: Cargo.toml
contracts/examples/erc1155/abi/src/: main.rs
contracts/examples/erc1155/tests/: erc1155_denali_rs_test.rs
contracts/examples/erc1155/wasm/: Cargo.toml
contracts/examples/erc1155/wasm/src/: lib.rs
contracts/examples/moax-dct-swap/wasm/: Cargo.toml
contracts/examples/moax-dct-swap/wasm/src/: lib.rs
contracts/examples/order-book/pair/: Cargo.toml
contracts/examples/order-book/pair/abi/: Cargo.toml
contracts/examples/order-book/pair/abi/src/: main.rs
contracts/examples/order-book/pair/wasm/: Cargo.toml
contracts/examples/order-book/pair/wasm/src/: lib.rs
contracts/examples/ping-pong-moax/: Cargo.toml
contracts/examples/ping-pong-moax/abi/: Cargo.toml
contracts/examples/ping-pong-moax/abi/src/: main.rs
contracts/examples/ping-pong-moax/tests/: ping_pong_moax_denali_rs_test.rs
contracts/examples/ping-pong-moax/wasm/: Cargo.toml
contracts/examples/ping-pong-moax/wasm/src/: lib.rs
contracts/feature-tests/abi-tester/abi/: Cargo.toml
contracts/feature-tests/abi-tester/abi/src/: main.rs
contracts/feature-tests/composability/: Cargo.toml
contracts/feature-tests/composability/dct-contract-pair/: Cargo.toml
contracts/feature-tests/composability/dct-contract-pair/first-contract/: Cargo.toml
contracts/feature-tests/composability/dct-contract-pair/first-contract/wasm/: Cargo.toml
contracts/feature-tests/composability/dct-contract-pair/second-contract/: Cargo.toml
contracts/feature-tests/composability/dct-contract-pair/second-contract/wasm/: Cargo.toml
contracts/feature-tests/composability/dct-contract-pair/tests/: denali_rs_test.rs
contracts/feature-tests/composability/execute-on-dest-dct-issue-callback/: Cargo.toml
contracts/feature-tests/composability/execute-on-dest-dct-issue-callback/child/: Cargo.toml
contracts/feature-tests/composability/execute-on-dest-dct-issue-callback/child/wasm/: Cargo.toml
contracts/feature-tests/composability/execute-on-dest-dct-issue-callback/parent/: Cargo.toml
contracts/feature-tests/composability/execute-on-dest-dct-issue-callback/parent/wasm/: Cargo.toml
contracts/feature-tests/composability/forwarder/: Cargo.toml
contracts/feature-tests/composability/forwarder-raw/: Cargo.toml
contracts/feature-tests/composability/forwarder-raw/wasm/: Cargo.toml
contracts/feature-tests/composability/forwarder-raw/wasm-no-managed-ei/: Cargo.toml
contracts/feature-tests/composability/forwarder-raw/wasm-no-managed-ei/src/: lib.rs
contracts/feature-tests/composability/forwarder/src/: call_sync.rs  call_transf_exec.rs  dct.rs
contracts/feature-tests/composability/forwarder/wasm/: Cargo.toml
contracts/feature-tests/composability/forwarder/wasm-no-managed-ei/: Cargo.toml
contracts/feature-tests/composability/local-dct-and-nft/: Cargo.toml
contracts/feature-tests/composability/local-dct-and-nft/src/: lib.rs
contracts/feature-tests/composability/local-dct-and-nft/wasm/: Cargo.toml
contracts/feature-tests/composability/proxy-test-first/: Cargo.toml
contracts/feature-tests/composability/proxy-test-first/wasm/: Cargo.toml
contracts/feature-tests/composability/proxy-test-first/wasm-no-managed-ei/: Cargo.toml
contracts/feature-tests/composability/proxy-test-second/: Cargo.toml
contracts/feature-tests/composability/proxy-test-second/wasm/: Cargo.toml
contracts/feature-tests/composability/proxy-test-second/wasm-no-managed-ei/: Cargo.toml
contracts/feature-tests/composability/recursive-caller/: Cargo.toml
contracts/feature-tests/composability/recursive-caller/wasm/: Cargo.toml
contracts/feature-tests/composability/recursive-caller/wasm-no-managed-ei/: Cargo.toml
contracts/feature-tests/composability/tests/: composability_denali_go_test.rs  composability_denali_rs_test.rs
contracts/feature-tests/composability/vault/: Cargo.toml
contracts/feature-tests/composability/vault/wasm/: Cargo.toml
contracts/feature-tests/composability/vault/wasm/src/: lib.rs
contracts/feature-tests/use-module/: Cargo.toml  use_module_expected.abi.json
contracts/feature-tests/use-module/abi/: Cargo.toml
contracts/feature-tests/use-module/abi/src/: main.rs
contracts/feature-tests/use-module/src/: internal_mod_a.rs  internal_mod_b.rs  internal_mod_c.rs  use_module.rs
contracts/feature-tests/use-module/tests/: use_module_denali_go_test.rs  use_module_denali_rs_test.rs
contracts/feature-tests/use-module/wasm/: Cargo.toml
contracts/feature-tests/use-module/wasm/src/: lib.rs
(+177 files in other folders)
