[package]
name = "ping-pong-moax"
version = "0.0.2"
authors = [ "Bruda Claudiu-Marcel <claudiu725@yahoo.com>",]
edition = "2018"
publish = false

[lib]
path = "src/ping_pong.rs"

[features]
wasm-output-mode = ["dharitri-wasm-node"]

[dependencies.dharitri-wasm]
version = "0.2.1"
path = "../../../dharitri-wasm"

[dependencies.dharitri-wasm-node]
version = "0.2.1"
path = "../../../dharitri-wasm-node"
optional = true

[dev-dependencies.dharitri-wasm-debug]
version = "0.2.1"
path = "../../../dharitri-wasm-debug"
