[package]
name = "use-module"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@dharitri.com>"]
edition = "2018"
publish = false

[lib]
path = "src/use_module.rs"

[features]
wasm-output-mode = [
    "dharitri-wasm-node",
    "dharitri-wasm-module-dns/wasm-output-mode",
    "dharitri-wasm-module-dct/wasm-output-mode",
    "dharitri-wasm-module-features/wasm-output-mode",
    "dharitri-wasm-module-governance/wasm-output-mode",
    "dharitri-wasm-module-pause/wasm-output-mode",
]

[dependencies.dharitri-wasm-module-dns]
version = "0.2.1"
path = "../../modules/dharitri-wasm-module-dns"

[dependencies.dharitri-wasm-module-dct]
version = "0.2.1"
path = "../../modules/dharitri-wasm-module-dct"

[dependencies.dharitri-wasm-module-features]
version = "0.2.1"
path = "../../modules/dharitri-wasm-module-features"

[dependencies.dharitri-wasm-module-governance]
version = "0.2.1"
path = "../../modules/dharitri-wasm-module-governance"

[dependencies.dharitri-wasm-module-pause]
version = "0.2.1"
path = "../../modules/dharitri-wasm-module-pause"

[dependencies.dharitri-wasm]
version = "0.2.1"
path = "../../../dharitri-wasm"

[dependencies.dharitri-wasm-node]
version = "0.2.1"
path = "../../../dharitri-wasm-node"
optional = true

[dev-dependencies.dharitri-wasm-debug]
version = "0.2.1"
path = "../../../dharitri-wasm-debug"
