[package]
name = "moax-dct-swap-wasm"
version = "0.0.0"
edition = "2018"
publish = false

[lib]
crate-type = [ "cdylib",]

[workspace]
members = [ ".",]

[dev-dependencies]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.moax-dct-swap]
path = ".."
features = ["wasm-output-mode"]
default-features = false

[dependencies.dharitri-wasm-output]
version = "0.2.1"
path = "../../../../dharitri-wasm-output"
features = ["wasm-output-mode"]
