[package]
name = "order-book-pair"
version = "0.0.0"
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = [ "dharitri-wasm-node",]

[dependencies.dharitri-wasm]
version = "0.2.1"
path = "../../../../dharitri-wasm"

[dependencies.dharitri-wasm-node]
version = "0.2.1"
optional = true
path = "../../../../dharitri-wasm-node"

[dev-dependencies.dharitri-wasm-debug]
version = "0.2.1"
path = "../../../../dharitri-wasm-debug"
