[package]
name = "abi-tester-abi"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@dharitri.com>"]
edition = "2018"
publish = false

[dependencies.abi-tester]
path = ".."

[dependencies.dharitri-wasm]
version = "0.2.1"
path = "../../../../dharitri-wasm"

[dependencies.dharitri-wasm-debug]
version = "0.2.1"
path = "../../../../dharitri-wasm-debug"
