[package]
name = "forwarder-raw-wasm"
version = "0.0.0"
authors = ["Andrei Marinica <andrei.marinica@dharitri.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.forwarder-raw]
path = ".."
features=["wasm-output-mode-unmanaged-ei"]

[dependencies.dharitri-wasm-output]
version = "0.2.1"
path = "../../../../../dharitri-wasm-output"
features=["wasm-output-mode"]

[workspace]
members = ["."]
